--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -10,7 +10,7 @@
 }
 
 .container-black{
-    margin-top: 60px;
+    margin-top: 55px;
     position: fixed;
     width: 100%;
     background-color:black;
@@ -45,4 +45,8 @@
          
      }
 
+}
+
+.navbar{
+    padding: 0px 20px;
 }
